# src/_generated/swagger.json
@@ -26,7 +26,23 @@
 						"description": "Ok",
 						"content": {
 							"application/json": {
-								"schema": {}
+								"schema": {
+									"properties": {
+										"length": {
+											"type": "number",
+											"format": "double"
+										},
+										"details": {
+											"items": {},
+											"type": "array"
+										}
+									},
+									"required": [
+										"length",
+										"details"
+									],
+									"type": "object"
+								}
 							}
 						}
 					}
@@ -38,7 +54,145 @@
 						"name": "id",
 						"required": true,
 						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				]
+			}
+		},
+		"/appointment/all/{email}": {
+			"get": {
+				"operationId": "GetAllUserAppointments",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "email",
+						"required": true,
+						"schema": {
 							"type": "string"
+						}
+					}
+				]
+			}
+		},
+		"/appointment/allPast/{email}": {
+			"get": {
+				"operationId": "GetAllUserPastAppointments",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "email",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
+		"/appointment/allFuture/{email}": {
+			"get": {
+				"operationId": "GetAllUserFutureAppointments",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "email",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
+		"/appointment/new/{email}": {
+			"post": {
+				"operationId": "CreateAppointment",
+				"responses": {
+					"204": {
+						"description": "No content"
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "email",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
+		"/appointment/setAsDone/{id}": {
+			"post": {
+				"operationId": "SetAsDone",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "boolean"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
 						}
 					}
 				]
